--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
     "bugs": {
         "url": "https://github.com/dpjanes/homestar-TEMPLATE/issues"
     }, 
-    "dependencies": {
-    }, 
-    "peerDependencies": {
-        "iotdb": ">=0.4.16"
-    }, 
+    "dependencies": {}, 
     "description": "HomeStar / IOTDB Bridge for Template", 
     "devDependencies": {
         "grunt": "~0.4.5", 
@@ -25,6 +21,9 @@
     "license": "Apache-2.0", 
     "main": "index.js", 
     "name": "homestar-TEMPLATE", 
+    "peerDependencies": {
+        "iotdb": ">=0.6.3"
+    }, 
     "private": false, 
     "repository": {
         "type": "git", 
@@ -33,5 +32,5 @@
     "scripts": {
         "test": "grunt"
     }, 
-    "version": "0.0.2"
+    "version": "0.0.3"
 }
