--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dependencies": {
         "iotdb": ">=0.6.3"
     }, 
-    "description": "HomeStar / IOTDB Bridge for Template", 
+    "description": "IOTDB Bridge for Template", 
     "devDependencies": {
         "grunt": "~0.4.5", 
         "grunt-contrib-jshint": "~0.10.0", 
